# polyglot-fraud-auditor

./: .gitignore  README.md  docker-compose.yml
infrastructure/k8s/helm/java-transaction-engine/: Chart.yaml  values.yaml
infrastructure/k8s/helm/java-transaction-producer/: Chart.yaml  values.yaml
infrastructure/terraform/: README.md  terraform-destroy-all.sh  terraform-stacks.sh
infrastructure/terraform/bootstrap/aws-state/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/environments/: dev.aws-dynamodb.backend.hcl  dev.aws-sqs.backend.hcl  dev.azure-identity.backend.hcl  dev.azure-rg.backend.hcl  dev.backend.hcl  dev.backend.hcl.example  dev.oci-network.backend.hcl  dev.oci-oke.backend.hcl  prod.backend.hcl.example
local-dev/localstack-ready.d/: 10-sqs-transaction-events.sh
services/: APPLICATION-INTEGRATION-CONTRACT.md
services/java-transaction-engine/: pom.xml
services/java-transaction-producer/: pom.xml
services/python-agent-auditor/: .env.example  pyproject.toml
services/python-agent-auditor/src/fraud_auditor/: api.py  audit.py  callback.py  handler.py  settings.py
services/python-agent-auditor/tests/: test_audit.py
services/python-fraud-auditor/: .env.example  pyproject.toml
services/python-fraud-auditor/src/fraud_auditor/: __init__.py  api.py  audit.py  dev_sqs_poll.py  handler.py  main.py  models.py  persistence.py  settings.py
services/python-fraud-auditor/tests/: test_api.py  test_handler.py  test_persistence.py
(+79 files in other folders)
