[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fraud-auditor"
version = "0.1.0"
description = "Autonomous fraud auditor: SQS/Lambda consumer, audit logic, FastAPI, and callback integration."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
agent-api = "fraud_auditor.main:main"
dev-sqs-poll = "fraud_auditor.dev_sqs_poll:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
